updated LogUtils.java and MySimpleLoggingJob for minor refactoring